# C-Assignment-2

./: .gitignore  CMakeLists.txt  c-assignment-2.kdev4
.kdev4/: c-assignment-2.kdev4
ex1/: Person.h  Student.cpp  Student.h  ex1  ex1.cpp  marks.txt  studs.txt
ex2/: ReadFilteredWords.cpp  ReadFilteredWords.h  ReadWords.cpp  ReadWords.h  ex2.cpp  filter1.cpp  filter1.h  filter2.cpp  filter2.h  filter3.cpp  filter3.h  gpl-3.0.txt
